Add some infrastructure logic. Add YoungGen test